--- a/styles/styles.css
+++ b/styles/styles.css
@@ -537,9 +537,7 @@ background-color: inherit;
 
   display: flex;
   justify-content: center;
-align-items: center;
-text-align: center;
-
+ align-items: center;
 border: none;
 width: 200px;
 height: 50px;
@@ -550,13 +548,21 @@ padding: 10px 28px;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.87;
-
-
 letter-spacing: 0.06em;
-
 
 }
 
+
+.icon-send{
+  width:24px ;
+  height: 24px;
+ margin-top:13px;
+ margin-bottom:13px;
+ margin-right: 10px;
+ margin-left: 28px;
+
+
+}
 
 
 /* Портфоліо */
