--- a/styles/styles.css
+++ b/styles/styles.css
@@ -534,7 +534,6 @@ background-color: inherit;
   padding: 15px 16px;
 }
 .subscribe-button{
-
   display: flex;
   justify-content: center;
  align-items: center;
@@ -551,17 +550,10 @@ line-height: 1.87;
 letter-spacing: 0.06em;
 
 }
-
-
 .icon-send{
   width:24px ;
   height: 24px;
- margin-top:13px;
- margin-bottom:13px;
- margin-right: 10px;
- margin-left: 28px;
-
-
+  margin-left: 10px;
 }
 
 
@@ -778,12 +770,14 @@ margin-bottom:10px;
 }
 
 .form-input{
+  width: 100%;
+  height: 40px;
   margin: 0px;
   padding-left: 28px;
  
-  border: 1px solid rgba(33, 33, 33, 0.2);
+border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
-min-height: 40px;
+
 }
 .text-area{
   border: 1px solid rgba(33, 33, 33, 0.2);
