--- a/styles/styles.css
+++ b/styles/styles.css
@@ -761,6 +761,7 @@ padding: 40px;
 
 }
 .form-field{
+  position: relative;
   display: flex;
   flex-direction: column;
  
@@ -770,6 +771,7 @@ margin-bottom:10px;
 }
 
 .form-input{
+ 
   width: 100%;
   height: 40px;
   margin: 0px;
@@ -842,4 +844,12 @@ vertical-align: middle;
 }
 .send-button:hover{
   background-color: var(--button-active);
+}
+.icon-modal{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(40%,155%);
+  Width: 18px;
+  Height:18px;
 }
