--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,7 +49,9 @@ button {
 textarea{
   resize: none;
 }
-
+input{
+  padding: 0px;
+}
 
 body {
   background-color: var(--white);
@@ -742,6 +744,7 @@ pointer-events: none;
   color: rgba(0, 0, 0, 1);
 }
 
+
 /* форми */
 
 .modal-text{
@@ -761,7 +764,7 @@ padding: 40px;
 
 }
 .form-field{
-  position: relative;
+
   display: flex;
   flex-direction: column;
  
@@ -847,9 +850,12 @@ vertical-align: middle;
 }
 .icon-modal{
   position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(40%,155%);
+  bottom: 11px;
+  left: 12px;
+
   Width: 18px;
   Height:18px;
+}
+.icon-box{
+  position: relative;
 }
