--- a/styles/styles.css
+++ b/styles/styles.css
@@ -774,7 +774,6 @@ margin-bottom:10px;
 }
 
 .form-input{
- 
   width: 100%;
   height: 40px;
   margin: 0px;
@@ -782,12 +781,38 @@ margin-bottom:10px;
  
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
-
+outline: none;
 }
+
+.form-input:focus{
+  border: solid var(--accent-color);
+}
+/* .form-input .icon-modal:focus{
+  fill: var(--accent-color);
+} */
+
+
+.icon-modal{
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+
+  Width: 18px;
+  Height:18px;
+
+  fill: #212121;
+}
+.icon-box{
+  position: relative;
+}  
+
+
 .text-area{
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding:12px 16px;
+
+  outline: none;
 }
 .text-area::placeholder{
   font-size: 12px;
@@ -847,15 +872,4 @@ vertical-align: middle;
 }
 .send-button:hover{
   background-color: var(--button-active);
-}
-.icon-modal{
-  position: absolute;
-  bottom: 11px;
-  left: 12px;
-
-  Width: 18px;
-  Height:18px;
-}
-.icon-box{
-  position: relative;
 }
