add translate to icon

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -777,7 +777,7 @@ margin-right: auto;
   width: 100%;
   height: 40px;
   margin: 0px;
-  padding-left: 30px;
+  padding: 15px;
  
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
@@ -788,16 +788,17 @@ cursor: pointer;
 
 .form-input:focus,
 .text-area:focus {
-  border:1px solid var(--accent-color);
+  outline: none;
+  border-color:var(--accent-color);
 }
 
-.form-input:focus + .icon-input{
-  fill:var(--accent-color)
-}
 
+.icon-box{
+  position: relative;
+}  
 .icon-input{
   position: absolute;
-  bottom: 11px;
+  top: 11px;
   left: 12px;
 
   Width: 18px;
@@ -805,10 +806,22 @@ cursor: pointer;
   fill:  #212121;
 
 }
+.form-input:focus + .icon-input{
+  fill:var(--accent-color);
 
-.icon-box{
-  position: relative;
-}  
+}
+
+.form-input:focus + .modal-icon-man{
+  transform: translate(20px,-30px);
+}
+
+.form-input:focus + .modal-icon-phone{
+  transform: translate(40px,-30px);
+}
+.form-input:focus + .modal-icon-mail{
+  transform: translate(30px,-30px);
+}
+
 
 
 .text-area{
