--- a/styles/styles.css
+++ b/styles/styles.css
@@ -700,7 +700,7 @@ height: 100%;
   height: 100%;
   z-index: 99;
   background: rgba(0, 0, 0, 0.2);
-   transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),isibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden{
 visibility: hidden;
@@ -743,8 +743,12 @@ pointer-events: none;
  
   background-color:var(--modal-background);
   color: rgba(0, 0, 0, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-
+.close-modal:hover .icon-close,
+.close-modal:focus .icon-close{
+fill:var(--accent-color);
+}
 
 /* форми */
 
@@ -804,6 +808,7 @@ cursor: pointer;
   Width: 18px;
   Height:18px;
   fill:  #212121;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .form-input:focus + .icon-input{
@@ -852,39 +857,43 @@ margin-right: auto;
 }
 .form-box{
   margin-bottom:32px ;
-
-
 }
-.agree-policy{
+.checkbox-lable{
   display: flex;
- justify-content: center;
- margin-bottom: 30px;
-
-
-vertical-align: middle;
-
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 .custom-checkbox{
   width:16px;
   height:15px;
-border: 1px solid black;
-border-radius:2px;
+  margin-right: 7px;
+border: 1px solid #212121;
+  border-radius: 2px;
+  cursor: pointer;
 
 }
 .custom-checkbox-icon{
   display:none;
-  width:16px;
-  height:15px;
+
+ 
 }  
-.policy-checkbox:checked + .custom-checkbox{
-  background-color: var(--accent-color);
+.checkbox-origin:checked + .custom-checkbox{
+border:solid var(--accent-color);
+  background-color:var(--accent-color);
+
 }
-.policy-checkbox:checked + .custom-checkbox .custom-checkbox-icon{
+.checkbox-origin:checked + .custom-checkbox .custom-checkbox-icon{
   display: block;
-
+ 
+}
+.checkbox-origin:focus + .custom-checkbox{
+  box-shadow: 0 0 0 1px #000000;
 }
 
-
+.checkbox-origin{
+  appearance: none;
+}
 
 .policy-link{
   text-decoration: underline;
