--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,13 +205,14 @@ body {
   line-height: 1.87;
   padding: 10px 32px;
   border-radius: 4px;
-  box-shadow: 0px, 4px rgba(0, 0, 0, 0.15);
+  background: #188CE8;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   display: block;
   margin-left: auto;
   margin-right: auto;
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -700,7 +701,7 @@ height: 100%;
   height: 100%;
   z-index: 99;
   background: rgba(0, 0, 0, 0.2);
-   transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),isibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden{
 visibility: hidden;
@@ -920,7 +921,7 @@ border:solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px; 
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .send-button:hover
 .send-button:focus{
