--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,7 @@ body {
   padding-bottom: 32px;
   display: block;
 
-  transition: color var(transition);
+  transition: color var(--transition);
 }
 .nav-link:hover,
 .nav-contacts:hover,
@@ -167,6 +167,7 @@ body {
   content: '';
   width: 100%;
   height: 4px;
+margin-bottom: -1px;
   background-color: var(--accent-color);
  
   transition: background var(--transition);
@@ -213,7 +214,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin-left: auto;
   margin-right: auto;
 
-  transition: background var(--transition),box-shadow var(--transition);
+  transition: background var(--transition);
 }
 
 .hero-button:hover,
@@ -764,8 +765,6 @@ margin-bottom: 12px;
 }
 .modal-form{
 width: 100%;
-margin-bottom: 20px;
-
 margin-left: auto;
 margin-right: auto;
 
@@ -776,14 +775,17 @@ margin-right: auto;
   flex-direction: column;
 }
 .form-field:not(:last-child){
-  margin-bottom: 10px;
+margin-bottom: 10px;
+}
+.input-box{
+  margin-bottom: 20px;
 }
 
 .form-input{
   width: 100%;
   height: 40px;
   margin: 0px;
-  padding: 15px;
+  padding-left: 30px;
  
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
@@ -819,14 +821,14 @@ cursor: pointer;
 }
 
 .form-input:focus + .modal-icon-man{
-  transform: translate(20px,-30px);
+  transform: translate(20px,-35px);
 }
 
 .form-input:focus + .modal-icon-phone{
-  transform: translate(40px,-30px);
+  transform: translate(40px,-35px);
 }
 .form-input:focus + .modal-icon-mail{
-  transform: translate(30px,-30px);
+  transform: translate(30px,-35px);
 }
 
 
@@ -855,7 +857,7 @@ color: rgba(117, 117, 117, 0.5);
 line-height: 1.16;
 letter-spacing: 0.01em;
 margin-bottom: 4px;
-margin-right: auto;
+
 }
 .form-box{
   margin-bottom:32px ;
@@ -865,6 +867,7 @@ margin-right: auto;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+ 
 }
 .custom-checkbox{
   width:16px;
